--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>vue-block</title>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <title>VUE组件库</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but vue-block doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>很抱歉，如果没有启用javascript，系统将无法正常工作。</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
